[PRMT-3486] Continued working on E2E test refactors.